added context to the sites

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 		<div class="container-fluid meet-our-teachers">
 			<div class="row">
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-sm-4 col-md-2 col-md-offset-3">
+				<div class="col-xs-6 col-sm-4 col-lg-2 col-lg-offset-3">
 					<a data-toggle="collapse" href="#teacherOneCollapse">
 						<img src="images/teachers/teacher1.jpg" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -131,11 +131,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches: Piano
-									  From: Illinois
-									  Loves: Warmth
-									  Hates: Cold
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Song</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Loves:</td>
+													<td>Puppies</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Those episodes of Family Guy where Peter is fighting the chicken.</td>
+												</tr>
+												<tr>
+													<td>From:</td>
+													<td>Alabama</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -152,11 +172,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches: Piano
-									  From: Illinois
-									  Loves: Warmth
-									  Hates: Cold
+								  <div class="col-xs-12">
+									  <div class="table">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Song</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Loves:</td>
+													<td>Puppies</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Those episodes of Family Guy where Peter is fighting the chicken.</td>
+												</tr>
+												<tr>
+													<td>From:</td>
+													<td>Alabama</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -169,7 +209,7 @@
 				</div>
 				<!-- End of Individual Teacher -->
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-sm-4 col-md-2">
+				<div class="col-xs-6 col-sm-4 col-lg-2">
 					<a data-toggle="collapse" href="#teacherTwoCollapse">
 						<img src="images/teachers/teacher2.png" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -180,11 +220,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches: String
-									  From: Alaska
-									  Loves: Dancing
-									  Hates: Trump
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>String</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Alaska</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Dancing</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Trump</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -201,24 +261,44 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches: String
-									  From: Alaska
-									  Loves: Dancing
-									  Hates: Trump
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>String</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Alaska</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Dancing</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Trump</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
 							<div class="panel-footer text-center">
 							<p>
-						  "James was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
+						  "Bodil was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
 							</div>
 						</div>
 					<!-- End of Mobile Panel-->
 				</div>
 				<!-- End of Individual Teacher -->
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-4 col-md-2">
+				<div class="col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-4 col-lg-2">
 					<a data-toggle="collapse" href="#teacherThreeCollapse">
 						<img src="images/teachers/teacher3.png" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -229,11 +309,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches:Piano
-									  From: New York
-									  Loves: Puppies
-									  Hates: AIDS
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Piano</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>New York</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Puppies</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>AIDS</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -250,17 +350,37 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-8">
-									  Teaches:Piano
-									  From: New York
-									  Loves: Puppies
-									  Hates: AIDS
+								  <div class="col-xs-12">
+									 <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Piano</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>New York</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Puppies</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>AIDS</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
 							<div class="panel-footer text-center">
 							<p>
-						  "James was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
+						  "Derek was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
 							</div>
 						</div>
 					<!-- End of Mobile Panel-->
@@ -269,7 +389,7 @@
 			</div>
 			<div class="row">
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-sm-4 col-md-2 col-md-offset-3">
+				<div class="col-xs-6 col-sm-4 col-lg-2 col-lg-offset-3">
 					<a data-toggle="collapse" href="#teacherFourCollapse">
 						<img src="images/teachers/teacher4.png" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -280,11 +400,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-10">
-									  Teaches: Guitarr
-									  From: Kansas
-									  Loves: Piercings
-									  Hates: Hair dye
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Guitar</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Kansas</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Piercings</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Hair Dye</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -301,24 +441,44 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-10">
-									  Teaches: Guitarr
-									  From: Kansas
-									  Loves: Piercings
-									  Hates: Hair dye
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Guitar</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Kansas</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Piercings</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Hair Dye</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
 							<div class="panel-footer text-center">
 							<p>
-						  "James was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
+						  "Jade was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
 							</div>
 						</div>
 					<!-- End of Mobile Panel-->
 				</div>
 				<!-- End of Individual Teacher -->
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-sm-4 col-md-2">
+				<div class="col-xs-6 col-sm-4 col-lg-2">
 					<a data-toggle="collapse" href="#teacherFiveCollapse">
 						<img src="images/teachers/teacher5.png" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -329,11 +489,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-9">
-									  Teaches: Drums
-									  From: New York
-									  Loves: Fun
-									  Hates: Bathing
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Percussion</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>New York</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Fun</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Bathing</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -350,24 +530,44 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-9">
-									  Teaches: Drums
-									  From: New York
-									  Loves: Fun
-									  Hates: Bathing
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Percussion</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>New York</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Fun</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Bathing</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
 							<div class="panel-footer text-center">
 							<p>
-						  "James was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
+						  "Everlynn was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
 							</div>
 						</div>
 					<!-- End of Mobile Panel-->
 				</div>
 				<!-- End of Individual Teacher -->
 				<!-- Start of Individual Teacher -->
-				<div class="col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-4 col-md-2">
+				<div class="col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-4 col-lg-2">
 					<a data-toggle="collapse" href="#teacherSixCollapse">
 						<img src="images/teachers/teacher6.png" class="img-responsive img-rounded" alt="a teacher">
 					</a>
@@ -378,11 +578,31 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-9">
-									  Teaches: Song
-									  From: New York
-									  Loves: Cocktails
-									  Hates: Water
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Song</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Dallas</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Cocktails</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Water</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
@@ -399,17 +619,37 @@
 						  </div>
 						  <div class="panel-body">
 							  <div class="row">
-								  <div class="col-xs-9">
-									  Teaches: Song
-									  From: New York
-									  Loves: Cocktails
-									  Hates: Water
+								  <div class="col-xs-12">
+									  <div class="table-responsive">
+										<table class="table">
+											<thead>
+												<tr>
+													<td>Teaches:</td>
+													<td>Song</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>From:</td>
+													<td>Dallas</td>
+												</tr>
+												<tr>
+													<td>Loves:</td>
+													<td>Cocktails</td>
+												</tr>
+												<tr>
+													<td>Hates:</td>
+													<td>Water</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								  </div>
 							  </div>
 							</div>
 							<div class="panel-footer text-center">
 							<p>
-						  "James was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
+						  "Doris was born Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, distinctio."</p>
 							</div>
 						</div>
 					<!-- End of Mobile Panel-->
@@ -457,7 +697,7 @@
 						<p>Since we are a pretty small school, we dont really offer any on campus accomodations. We have, however, some sponsors that can help you find a place short term place to live while you find something. Dont forget we over a full-cover scholorship which you can apply for.</p>
 						<p> We can also recommend these hotels and hostels:
 						<a href="#">NotARealSite.com</a> , <a href="#">SleepTight Hotels</a> , <a href="#">AirBnB</a> and <a href="#">Hilton Hotels</a></p>
-						<p> If you have any question - never hesitate to <a href="#contact">Contact Us!</a></p>
+						<p> If you have any question - never hesitate to <a href="contact.html">Contact Us!</a></p>
 					</div>
 			</div>
 		</div>
