--- a/index.html
+++ b/index.html
@@ -168,20 +168,20 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active"><img src="images/flute.jpeg" alt="First slide image" class="center-block">
         <div class="carousel-caption">
-          <h3>First slide Heading</h3>
-          <p>First slide Caption</p>
+          <h3>This girl knows how to handle a flute</h3>
+          <p>Would you like to know how as well?</p>
         </div>
       </div>
       <div class="item"><img src="images/flute.jpeg" alt="Second slide image" class="center-block">
         <div class="carousel-caption">
-          <h3>Second slide Heading</h3>
-          <p>Second slide Caption</p>
+          <h3>This girl knows how to handle a flute</h3>
+          <p>Would you like to know how as well?</p>
         </div>
       </div>
       <div class="item"><img src="images/flute.jpeg" alt="Third slide image" class="center-block">
         <div class="carousel-caption">
-          <h3>Third slide Heading</h3>
-          <p>Third slide Caption</p>
+          <h3>This girl knows how to handle a flute</h3>
+          <p>Would you like to know how as well?</p>
         </div>
       </div>
     </div>
@@ -212,16 +212,15 @@
 	<div class="col-md-3">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <div class="panel-title text-center">Become a student today!</div>
+            <div class="panel-title text-center">High level of education!</div>
           </div>
           <div class="panel-body">
-			  <img  class="img-responsive" src="images/editing.jpg" alt="editing">
-			  <p> We give you all the tools you need to succeed. We have a great
-			  variety of instruments available for you to choose from.
-			  Learn to make music!</p>
+			  <img  class="img-responsive" src="images/gallery_images/iPad Module 01 B_W.JPG" alt="editing">
+			  <p> Our school is one of the highest ranked in the country. With a degree from us,
+			  any orchestra will want you in their crew.</p>
 			</div>
           <div class="panel-footer text-center">
-			  <button class="btn btn-primary">Become a student!</button>
+			  <button class="btn btn-primary">Learn more!</button>
 			</div>
         </div>
       </div>
