--- a/gallery.html
+++ b/gallery.html
@@ -140,12 +140,12 @@
 		</div>
 		<div class="col-xs-6 col-lg-3">
 			<a href="#" data-toggle="modal" data-target="#modal30" class="test-gallery">
-				<img src="images/service_song.jpg" alt="..." class="img-thumbnail">
+				<img src="images/service_piano.jpg" alt="..." class="img-thumbnail">
 			</a>
 		</div>
 		<div class="modal fade" id="modal30">
 			<div class="modal-dialog">
-				<img src="images/service_song.jpg" alt="..." class="img-responsive">
+				<img src="images/service_piano.jpg" alt="..." class="img-responsive">
 			</div>
 		</div>
 	</div>
@@ -155,12 +155,12 @@
 		<div class="row">
 			<div class="col-xs-12 col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal4" class="test-gallery">
-					<img src="images/service_guitar.jpg" alt="..." class="img-thumbnail">
+					<img src="images/service_brass.jpg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal4">
 				<div class="modal-dialog">
-					<img src="images/service_guitar.jpg" alt="..." class="img-responsive">
+					<img src="images/service_brass.jpg" alt="..." class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-12  col-lg-6">
@@ -170,12 +170,12 @@
 			</div>
 			<div class="col-xs-12  col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal7" class="test-gallery">
-					<img src="images/service_song.jpg" alt="..." class="img-thumbnail">
+					<img src="images/service_percussion.jpg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal7">
 				<div class="modal-dialog">
-					<img src="images/service_song.jpg" alt="..." class="img-responsive">
+					<img src="images/service_percussion.jpg" alt="..." class="img-responsive">
 				</div>
 			</div>
 			
@@ -186,42 +186,42 @@
 		<div class="row">
 			<div class="col-xs-6 col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal8" class="test-gallery">
-					<img src="images/service_guitar.jpg" alt="..." class="img-thumbnail">
+					<img src="images/gallery_images/JB.jpg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal8">
 				<div class="modal-dialog">
-					<img src="images/service_guitar.jpg" alt="..." class="img-responsive">
+					<img src="images/gallery_images/JB.jpg" alt="..." class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-6 col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal9" class="test-gallery">
-					<img src="images/service_string.jpg" alt="..." class="img-thumbnail">
+					<img src="images/gallery_images/photo-1415201364774-f6f0bb35f28f.jpeg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal9">
 				<div class="modal-dialog">
-					<img src="images/service_string.jpg" alt="..." class="img-responsive">
+					<img src="images/gallery_images/photo-1415201364774-f6f0bb35f28f.jpeg" alt="..." class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-6 col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal10" class="test-gallery">
-					<img src="images/service_song.jpg" alt="..." class="img-thumbnail">
+					<img src="images/gallery_images/maxresdefault.jpg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal10">
 				<div class="modal-dialog">
-					<img src="images/service_song.jpg" alt="..." class="img-responsive">
+					<img src="images/gallery_images/maxresdefault.jpg" alt="..." class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-6 col-lg-3">
 				<a href="#" data-toggle="modal" data-target="#modal12" class="test-gallery">
-					<img src="images/service_song.jpg" alt="..." class="img-thumbnail">
+					<img src="images/service_string.jpg" alt="..." class="img-thumbnail">
 				</a>
 			</div>
 			<div class="modal fade" id="modal12">
 				<div class="modal-dialog">
-					<img src="images/service_song.jpg" alt="..." class="img-responsive">
+					<img src="images/service_string.jpg" alt="..." class="img-responsive">
 				</div>
 			</div>
 		</div>
@@ -234,19 +234,19 @@
 			<div id="collapseOne" class="collapse">
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/service_guitar.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/service_string.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/service_brass.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/service_percussion.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
 						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/service_piano.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 			</div>
 			<a data-toggle="collapse" href="#collapseOne"><h1 class="collapse-photo-header">Instruments</h1></a>
@@ -256,19 +256,19 @@
 		<div id="collapseTwo" class="collapse">
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/rootsmanuva.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/Ultra-Music-Festival-2016-Photo-Credit-aLIVE-Coverage.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/NUP_177974_1630.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/JB.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/maxresdefault.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/18_music.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 			</div>
 		<a data-toggle="collapse" href="#collapseTwo"><h1 class="collapse-photo-header">Shows</h1></a>
@@ -277,19 +277,19 @@
 		<div id="collapseThree" class="collapse">
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/Wright-1-crop.jpg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/photo-1415201364774-f6f0bb35f28f.jpeg" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/DOzNfXTW0AA-gkC.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 				<div class="row">
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/iPad Module 01 B_W.JPG" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/BTEC-Music-final-showcase-25-May-2016-143.JPG" alt="..." class="img-thumbnail"></div>
 					<div class="col-xs-4">
-						<img src="images/service_song.jpg" alt="..." class="img-thumbnail"></div>
+						<img src="images/gallery_images/brantley-gilbert-apple-music-commercial.jpg" alt="..." class="img-thumbnail"></div>
 				</div>
 			</div>
 		<a data-toggle="collapse" href="#collapseThree"><h1 class="collapse-photo-header">Classes</h1></a>
