--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>About us | Musicophone </title>
+<title>Contact us | Musicophone </title>
 
 <!-- Bootstrap -->
 <script src="https://use.fontawesome.com/89454cd725.js"></script>
@@ -100,7 +100,7 @@
                 </a>
             </li>
             <li class="active">
-                Contact
+                Contact us
             </li>
         </ol>
     </div>
