added blog page

--- a/all_services.html
+++ b/all_services.html
@@ -81,13 +81,14 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
+                            <a href="blog.html">Blog</a>
+                        </li>
+                        <li>
                             <a href="about.html">About</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                    </ul>
-                    </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -142,8 +143,8 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_piano.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to play the piano? Then our professional tutors will teach you, with experience from
-                            real life scenarios.</p>
+                        <p>Do you want to learn how to play the piano? Then our professional tutors will teach you, with experience
+                            from real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
                         <a href="service_piano.html" class="btn btn-primary">Read more</a>
@@ -160,8 +161,8 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_string.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to play a string instrument? Then our professional tutors will teach you, with experience from
-                            real life scenarios.</p>
+                        <p>Do you want to learn how to play a string instrument? Then our professional tutors will teach you,
+                            with experience from real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
                         <a href="service_string.html" class="btn btn-primary">Read more</a>
@@ -176,8 +177,8 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_brass.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to play a brass instrument? Then our professional tutors will teach you, with experience from
-                            real life scenarios.</p>
+                        <p>Do you want to learn how to play a brass instrument? Then our professional tutors will teach you,
+                            with experience from real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
                         <a href="service_brass.html" class="btn btn-primary">Read more</a>
@@ -194,8 +195,8 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_percussion.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to play a percussion instrument? Then our professional tutors will teach you, with experience from
-                            real life scenarios.</p>
+                        <p>Do you want to learn how to play a percussion instrument? Then our professional tutors will teach
+                            you, with experience from real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
                         <a href="service_percussion.html" class="btn btn-primary">Read more</a>
@@ -210,8 +211,8 @@
                     </div>
                     <div class="panel-body">
                         <img src="images/service_guitar.jpg" alt="Song" class="img-responsive">
-                        <p>Do you want to learn how to play the guitar? Then our professional tutors will teach you, with experience from
-                            real life scenarios.</p>
+                        <p>Do you want to learn how to play the guitar? Then our professional tutors will teach you, with experience
+                            from real life scenarios.</p>
                     </div>
                     <div class="panel-footer">
                         <a href="service_guitar.html" class="btn btn-primary">Read more</a>
