--- a/gallery.html
+++ b/gallery.html
@@ -77,6 +77,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="blog.html">Blog</a>
+					</li>
                     <li>
                         <a href="about.html">About</a>
                     </li>
