--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
