--- a/service_song.html
+++ b/service_song.html
@@ -81,13 +81,14 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
+                            <a href="blog.html">Blog</a>
+                        </li>
+                        <li>
                             <a href="about.html">About</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                    </ul>
-                    </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
