--- a/service_string.html
+++ b/service_string.html
@@ -81,13 +81,14 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
+                            <a href="blog.html">Blog</a>
+                        </li>
+                        <li>
                             <a href="about.html">About</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                    </ul>
-                    </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -257,7 +258,8 @@
                         </select>
                     </div>
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">I aslo want to join the orchestra - $19</label>
+                        <label>
+                            <input type="checkbox" value="">I aslo want to join the orchestra - $19</label>
                     </div>
                     <div class="form-group">
                         <label for="description">Special information</label>
