--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 </footer>
 <!-- End of the footer -->
 <script src="js/jquery-1.11.3.min.js"></script> 
-
+<script src="js/smooth-scroll.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
