minor bug fixes

--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
 						  <div class="panel-body">
 							  <div class="row">
 								  <div class="col-xs-12">
-									  <div class="table-responsive">
+									  <div class="table">
 										<table class="table">
 											<thead>
 												<tr>
@@ -354,7 +354,7 @@
 						  <div class="panel-body">
 							  <div class="row">
 								  <div class="col-xs-12">
-									 <div class="table-responsive">
+									 <div class="table">
 										<table class="table">
 											<thead>
 												<tr>
@@ -445,7 +445,7 @@
 						  <div class="panel-body">
 							  <div class="row">
 								  <div class="col-xs-12">
-									  <div class="table-responsive">
+									  <div class="table">
 										<table class="table">
 											<thead>
 												<tr>
@@ -534,7 +534,7 @@
 						  <div class="panel-body">
 							  <div class="row">
 								  <div class="col-xs-12">
-									  <div class="table-responsive">
+									  <div class="table">
 										<table class="table">
 											<thead>
 												<tr>
@@ -623,7 +623,7 @@
 						  <div class="panel-body">
 							  <div class="row">
 								  <div class="col-xs-12">
-									  <div class="table-responsive">
+									  <div class="table">
 										<table class="table">
 											<thead>
 												<tr>
