--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	</div>
 	</div>
 <!-- Start of large panels -->
-<div class="large-panels visible-lg visible-md-block">
+<div class="large-panels visible-lg visible-md">
 	<div class="row">
 		<div class="col-md-3 col-md-offset-3">
         <div class="panel panel-default">
@@ -247,7 +247,7 @@
 <footer class="site-footer">
   <div class="container">
     <div class="row">
-      <div class="main-footer-content col-md-4 col-md-offset-8">
+      <div class="main-footer-content col-md-4 pull-right">
         <h3 class="footer-text text-center">
         Keep up with us!
         </h3>
